# ChangeLog for dev-libs/geoip
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.212 2014/06/12 19:04:10 jer Exp $

  12 Jun 2014; Jeroen Roovers <jer@gentoo.org> geoip-1.6.0-r1.ebuild,
  files/geoipupdate-r2.sh:
  Switch to HTTPS for database downloads.

  09 Jun 2014; Mike Frysinger <vapier@gentoo.org> geoip-1.6.0-r1.ebuild:
  Mark arm64/m68k/s390/sh stable.

  29 Apr 2014; Jeroen Roovers <jer@gentoo.org> -geoip-1.4.8-r3.ebuild,
  -geoip-1.5.0.ebuild, -geoip-1.5.1.ebuild, -geoip-1.5.2.ebuild,
  -files/geoip-1.5.0-pkgconfig.patch:
  Old.

  07 Apr 2014; Jeroen Roovers <jer@gentoo.org> -files/geoipupdate-r1.sh:
  Old.

  05 Apr 2014; Agostino Sarubbo <ago@gentoo.org> geoip-1.6.0-r1.ebuild:
  Stable for alpha, wrt bug #501344

  05 Apr 2014; Agostino Sarubbo <ago@gentoo.org> geoip-1.6.0-r1.ebuild:
  Stable for ppc64, wrt bug #501344

  05 Apr 2014; Agostino Sarubbo <ago@gentoo.org> geoip-1.6.0-r1.ebuild:
  Stable for ppc, wrt bug #501344

  23 Mar 2014; Agostino Sarubbo <ago@gentoo.org> geoip-1.6.0-r1.ebuild:
  Stable for sparc, wrt bug #501344

  12 Mar 2014; Markus Meier <maekke@gentoo.org> geoip-1.6.0-r1.ebuild:
  arm stable, bug #501344

  23 Feb 2014; Pacho Ramos <pacho@gentoo.org> geoip-1.6.0-r1.ebuild:
  x86 stable, bug #501344

  23 Feb 2014; Pacho Ramos <pacho@gentoo.org> geoip-1.6.0-r1.ebuild:
  amd64 stable, bug #501344

  15 Feb 2014; Jeroen Roovers <jer@gentoo.org> geoip-1.6.0-r1.ebuild:
  Stable for HPPA (bug #501344).

  15 Feb 2014; Jeroen Roovers <jer@gentoo.org> geoip-1.6.0-r1.ebuild:
  Drop net-misc/geoipupdate dependency as this requires a MaxMind subscription,
  and it is not needed for updating the basic databases.

  15 Feb 2014; Akinori Hattori <hattya@gentoo.org> geoip-1.6.0-r1.ebuild:
  ia64 stable wrt bug #501344

  02 Feb 2014; Sergey Popov <pinkbyte@gentoo.org> geoip-1.6.0-r1.ebuild:
  Add ~s390, wrt bug #490062
