@@ -2,6 +2,7 @@
 Hash: SHA256
 
 AUX geoipupdate-r2.sh 853 SHA256 0db50d206cffa000c42f2f22fce02e990f5383ac1ca00faafc81e6e24f49b8d7 SHA512 9af29239e5e439e98651ea4640a06bf88c1968dd3cef58e36fdf197b99da45404dd571514234d0a4d708719e37473fc582b6a59c1559659ed47017061d578303 WHIRLPOOL 46451c31cf0d1c170dbbd4ad9660639da851ede7c9757a28769f4314fd63ea350118a29656b14b6d14b587d703c8eeb7dc2a2a4119cc1a5e5f7bebc33e0c6c43
+AUX geoipupdate-r3.sh 933 SHA256 f1c6685061e2709b5b5a5973520cd6622a4efb81c41c1e6740a8e52076c9f3b8 SHA512 65d0be2bed9b0885786d35eb0ebb838ca46088447e0ed1252f818dad1ba986c7a79cd66f61cbf938614ebe4ccf63ddfcfe14dee4a1b69958c22fbc7be13fb006 WHIRLPOOL fd9dd3f231241bb91210f1467d3312d8e4e5c71a3b43afd55b1a87fa3cb411b89e95b6267f7d32590f27dd54738c3d5a2ed9123e34abcb682c9b9f95280c2563
 DIST GeoIP.dat.gz 393946 SHA256 fc7f90a8236b958d3fdbcc333f657651b1680a3083fc398828c88b67500241a0 SHA512 00bc54ad6ec92f3fe963041dc0d714649b9df1a43fee217a56cebbb9cccb289d49510bfee98315d31003c75e7aad9603e05ce089776b699eb56fafebbda4e4ae WHIRLPOOL 19915f5d2ede5bcb4160a5a39ea48dbb8ed400b1983bbfef9fe43ee5007d87f3ba5b18a1fa6438fc183f5855312184cbb176676dbd6f5462d6531fba4ecdd1bd
 DIST GeoIPASNum.dat.gz 1966360 SHA256 499cee393bb524a12feafeb78f28cb076e43b793f3c9d2d3928d7f1afa706284 SHA512 7f5d86dedf175134d975fe28d60f1946727b16d983de3c9cabe4e86884f1ad5fdaf77a4e39fa39804f08f573dbc2d8923db6cc21268e6143fb3d3f34a32696f5 WHIRLPOOL fd0394d9ea35a3c4135fc2b60ca4d86d8aef3ed03299c251e493fbe2a3a15b12338c133a1d919d23b9fec5addd6a260dd6c3bbc0b1ea7aa614caa0d457b1cdf0
 DIST GeoIPv6.dat.gz 613971 SHA256 ba76c683d525a7119c3e588ea0ed97ec0dbb52c93d506a355d67bc6a88caef52 SHA512 7c63426caee53c851c141b52175156fca916bf7a075093f4deb2160471fdbdd305821760aba354f5f44a6154e8739fbe0e95442d555ba9794a331acceb64e124 WHIRLPOOL c00cb796c2555c7710f42ea0b0b5fe37b0bad1d63da167e2f555366519a126f737d3361ecec4c8a351bc64f1dbbe1d869a97f0bb5a542161c2ecf42184119eb4
@@ -9,12 +10,13 @@ DIST GeoLiteCity.dat.gz 11312286 SHA256 998b3a90122807b003c21d714b1114d6c4f882b4
 DIST GeoLiteCityv6.dat.gz 11538424 SHA256 520ac5834cc1b060ee071f55f280348098bd0315a8607cd58fabd954e2931cd6 SHA512 c40f5781c69201c9a0cda9b6fbd80ccc234be21158a754501303df153da1ac82a4d562d0138076121584928ec63be69fac24ebc100c66d6e16a92879bec058a1 WHIRLPOOL c165a26a29a8b171bc2b9e005587e6cfc14849fd092af8c24c64d685115ba98699c3796abbd2f69b0c5a31b9165f03e699dad0b986b3103461978d2b9ee10b4a
 DIST geoip-1.6.0.tar.gz 160178 SHA256 61bed5907e9544d5b1071ea962a55154dd0827c04bd8a5814fb5863897c9a024 SHA512 b8cb2fff83ebf5a96981aa91d8d1d54e421ca290116ec4ecbf799c67c77524a245316db67fa538ae17a4e123338a1414e85c641ee156fb385887647c31a1a9e9 WHIRLPOOL 3689ffd74fec7e59afbe5db470cb15457b3dfd9c36a93577e4126425fcd64cdec59c51fa09b30e14cea31994f1f372c41c5d1bae45b9356448a4cc280220cad1
 EBUILD geoip-1.6.0-r1.ebuild 1869 SHA256 07f82a801ede649ba1e11192a25fd431aa31479bcae4270aa7692fde0512f260 SHA512 d2ea46b981e5d28fc1ce2ee416451c708a8edb4e8b9f7c8f90a497daddd22c9d5747144763b4f717ceea524b2c562a86fcfdb86f66237a6de0d4f47bdfcd2325 WHIRLPOOL 2a9bf693a11b5742f2bdc317046e2c9b00c2fba3c9bad7006237ea38fae9d1722cd199712381f7a7d5c79fa384166912b03ab6d564c2a8df5bce8275bcf00641
-MISC ChangeLog 25562 SHA256 07e1a246f7495dd7982ec2ca973c605d7b30d7e535b44765e28522d87090fca5 SHA512 927955d479d099fcf4d081fb5a66d471a9d0e3c50007ef2d8b6207dc77e4699793d1d16a2210ce9a1b99b839206502a819869c267286d0e25d55d34a7c903998 WHIRLPOOL e637214ed8a4ae3efd7abe579530137c19b61b685a8a4cdf5757a87ff69ac20511e7e60fd403c8ab18a7c50dd685485c2fdda2fbd83c7ec1e597ce3e5e38c0a8
+EBUILD geoip-1.6.0-r2.ebuild 1233 SHA256 9d59b29a2bb7274417030c16c0d35d9cc9728093b23c35aaa9f83094ffd71343 SHA512 089bd8ddd3f323a9709e711ee0f42ba9e384838895618b95a4578f81c34ac5d45b619209d1e800d48a0f08a5851c13b36a21f1e953056ba86f1d45e27e9d3488 WHIRLPOOL aa88882dfe97a6560f2edef0cdbe1cffe27e1e86625ab1021fe531f3c9e8ec46cb9424ca08fa057852d8aac501e613537e128fcd02f09c7995120d07998b866f
+MISC ChangeLog 25888 SHA256 224b130f4bb114766bd205220e9ca34af49dc60f3b1b70cbf32904cf71bba9a6 SHA512 0d69b7f6cccbb6276a4c95e10900672aac14fb55ca734ab017dba6545aeb9665236f76187ad4837bd500ed0dc87aaba30d4861e504eae96ea5fbc41ff34cdcee WHIRLPOOL adf256b076af68a05e9fe47992a47e8b3629d499b7661125d178fb97754e91b6900ca196254c2f1069703f7ca8438d033e2bf7f7e20b69f23865a11f4bf7406f
 MISC metadata.xml 241 SHA256 3d42196a34024a717e8521954e6be11f030735fe0fb86c7827cf047b8c7802e1 SHA512 88ff9c4b327d2972284a4354a38145fc154830c5ffb86912f3149214944ad72b930b3362da04f3fd1fc376e46a38c2d93fe3a67e5f3ed72b0a15d2692d208d49 WHIRLPOOL d239cc85487a236466ee0cf2cfbc35a1b19571fbccd598ee0f558f3068326f6b9a88bfc8942b769c1f93a6c47a83abd4f687768ac0e9bfae74a4023491d8f5b4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlOZ+asACgkQVWmRsqeSphMXPACeIuh+eNs4S7ufoPq9P5l46iPu
-Kl0AnAhltOagLpIcOI5Ow5MK0TFv8y8F
-=QFVu
+iEYEAREIAAYFAlOZ/pEACgkQVWmRsqeSphM4aQCfWl+m0X0CJ3TpLBq1zVT1g7u7
+i/kAn00FXCHpfDTcm0OqLtBhHwJKz0SZ
+=mT58
 -----END PGP SIGNATURE-----
