@@ -1,6 +1,14 @@
 # ChangeLog for dev-libs/geoip
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.212 2014/06/12 19:04:10 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.213 2014/06/12 19:25:03 jer Exp $
+
+*geoip-1.6.0-r2 (12 Jun 2014)
+
+  12 Jun 2014; Jeroen Roovers <jer@gentoo.org> +geoip-1.6.0-r2.ebuild,
+  +files/geoipupdate-r3.sh:
+  Remove all database downloads from SRC_URI, and set RESTRICT=test
+  accordingly. Add a -f --force option to the update script. Run the script in
+  pkg_postinst(). Add net-misc/wget dependency.
 
   12 Jun 2014; Jeroen Roovers <jer@gentoo.org> geoip-1.6.0-r1.ebuild,
   files/geoipupdate-r2.sh:
